packages/engine/src/tests/snapshots/engine__tests__tooltip__clean_math_nested_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      15,
      26
    ],
    "items": 6
  },
  {
    "range": [
      45,
      62
    ],
    "items": 7
  },
  {
    "range": [
      75,
      97
    ],
    "items": 7
  },
  {
    "range": [
      107,
      112
    ],
    "items": 3
  },
  {
    "range": [
      131,
      164
    ],
    "items": 17
  },
  {
    "range": [
      167,
      196
    ],
    "items": 7
  }
]
