packages/engine/src/tests/snapshots/engine__tests__tooltip__clean_math_string_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      0,
      18
    ],
    "items": 2
  },
  {
    "range": [
      20,
      33
    ],
    "items": 5
  },
  {
    "range": [
      35,
      50
    ],
    "items": 3
  }
]
