packages/engine/src/tests/snapshots/engine__tests__tooltip__clean_math_symbols_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      0,
      24
    ],
    "items": 6
  },
  {
    "range": [
      26,
      61
    ],
    "items": 16
  },
  {
    "range": [
      63,
      84
    ],
    "items": 6
  }
]
