packages/engine/src/tests/snapshots/engine__tests__tooltip__clean_sub_attachment_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      9,
      19
    ],
    "items": 6
  }
]
