packages/engine/src/tests/snapshots/engine__tests__tooltip__clean_sup_attachment_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      9,
      22
    ],
    "items": 7
  }
]
