packages/engine/src/tests/snapshots/engine__tests__tooltip__clean_unicode_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      19,
      24
    ],
    "items": 3
  }
]
